# rustcode

./: quine.rs
cbzip/: Cargo.toml
cbzip/src/: main.rs
clean-all-cargo/: Cargo.toml
clean-all-cargo/src/: main.rs
cryptopals/1-convert-hex-to-base64/: Cargo.toml
cryptopals/10-implement-cbc-mode/: Cargo.toml
cryptopals/11-an-ebccbc-detection-oracle/: Cargo.toml
cryptopals/12-byte-at-a-time-ecb-decryption-simple/: Cargo.toml
cryptopals/12-byte-at-a-time-ecb-decryption-simple/src/: lib.rs
cryptopals/13-ecb-cut-and-paste/: Cargo.toml
cryptopals/14-byte-at-a-time-ecb-decryption-harder/: Cargo.toml
cryptopals/14-byte-at-a-time-ecb-decryption-harder/src/: lib.rs
cryptopals/15-pkcs7-padding-validation/: Cargo.toml
cryptopals/16-cbc-bitflipping-attacks/: Cargo.toml
cryptopals/16-cbc-bitflipping-attacks/src/: lib.rs
cryptopals/17-the-cbc-padding-oracle/: Cargo.toml
cryptopals/17-the-cbc-padding-oracle/src/: lib.rs
cryptopals/18-implement-ctr-the-stream-cipher-mode/: Cargo.toml
cryptopals/18-implement-ctr-the-stream-cipher-mode/src/: lib.rs
cryptopals/19-break-fixed-nonce-ctr-mode-using-substitions/: Cargo.toml
cryptopals/19-break-fixed-nonce-ctr-mode-using-substitions/src/: lib.rs
cryptopals/2-fixed-xor/: Cargo.toml
cryptopals/20-break-fixed-nonce-ctr-statistically/: Cargo.toml
cryptopals/20-break-fixed-nonce-ctr-statistically/src/: lib.rs
cryptopals/21-implement-the-mt19937-mersenne-twister-rng/: Cargo.toml
cryptopals/22-crack-an-mt19937-seed/: Cargo.toml
cryptopals/22-crack-an-mt19937-seed/src/: lib.rs
cryptopals/23-clone-an-mt19937-rng-from-its-output/: Cargo.toml
cryptopals/24-create-the-mt19937-stream-cipher-and-break-it/: Cargo.toml
cryptopals/24-create-the-mt19937-stream-cipher-and-break-it/src/: lib.rs
cryptopals/25-break-random-access-read-write-aes-ctr/: Cargo.toml
cryptopals/25-break-random-access-read-write-aes-ctr/src/: lib.rs
cryptopals/26-ctr-bitflipping/: Cargo.toml
cryptopals/27-recover-the-key-from-cbc-with-iv-key/: Cargo.toml
cryptopals/27-recover-the-key-from-cbc-with-iv-key/src/: lib.rs
cryptopals/28-implement-a-sha-1-keyed-mac/: Cargo.toml
cryptopals/29-break-a-sha-1-keyed-mac-using-length-extension/: Cargo.toml
cryptopals/29-break-a-sha-1-keyed-mac-using-length-extension/src/: lib.rs
cryptopals/3-single-byte-xor-cipher/: Cargo.toml
cryptopals/30-break-an-md4keyed-mac-using-length-extension/: Cargo.toml
cryptopals/31-implement-and-break-hmac-sha1-with-an-artificial-timing-leak/: Cargo.toml
cryptopals/31-implement-and-break-hmac-sha1-with-an-artificial-timing-leak/src/: hmac.rs  http.rs  lib.rs
cryptopals/32-break-hmac-sha1-with-a-slightly-less-artificial-timing-leak/: Cargo.toml
cryptopals/32-break-hmac-sha1-with-a-slightly-less-artificial-timing-leak/src/: lib.rs
cryptopals/33-implement-diffie-hellman/: Cargo.toml
cryptopals/34-implement-a-mitm-key-fixing-attack-on-diffie-hellman-with-parameter-injection/: Cargo.toml
cryptopals/34-implement-a-mitm-key-fixing-attack-on-diffie-hellman-with-parameter-injection/src/: exchange.rs  lib.rs  message.rs
cryptopals/35-implement-dh-with-negotiated-groups-and-break-with-malicious-g-parameters/: Cargo.toml
cryptopals/35-implement-dh-with-negotiated-groups-and-break-with-malicious-g-parameters/src/: lib.rs
cryptopals/36-implement-secure-remote-password-srp/: Cargo.toml
cryptopals/36-implement-secure-remote-password-srp/src/: lib.rs  message.rs  sha256.rs  srp.rs
cryptopals/37-break-srp-with-a-zero-key/: Cargo.toml
cryptopals/37-break-srp-with-a-zero-key/src/: lib.rs
cryptopals/38-offline-dictionary-attack-on-simplified-srp/: Cargo.toml
cryptopals/38-offline-dictionary-attack-on-simplified-srp/src/: lib.rs  ssrp.rs
cryptopals/39-implement-rsa/: Cargo.toml
cryptopals/39-implement-rsa/src/: inv.rs  invmod.rs  lib.rs  primes.rs  primes.txt
cryptopals/4-detect-single-character-xor/: Cargo.toml
cryptopals/40-implement-an-e-eq-3-rsa-broadcast-attack/: Cargo.toml
cryptopals/40-implement-an-e-eq-3-rsa-broadcast-attack/src/: lib.rs
cryptopals/41-implement-unpadded-message-recovery-oracle/: Cargo.toml
cryptopals/42-bleichenbachers-e-eq-3-rsa-attack/: Cargo.toml
cryptopals/42-bleichenbachers-e-eq-3-rsa-attack/src/: lib.rs
cryptopals/43-dsa-key-recovery-from-nonce/: Cargo.toml
cryptopals/43-dsa-key-recovery-from-nonce/src/: dsa.rs  lib.rs
cryptopals/44-dsa-nonce-recovery-from-repeated-nonce/: Cargo.toml
cryptopals/44-dsa-nonce-recovery-from-repeated-nonce/src/: lib.rs
cryptopals/45-dsa-parameter-tampering/: Cargo.toml
cryptopals/45-dsa-parameter-tampering/src/: lib.rs
cryptopals/46-rsa-parity-oracle/: Cargo.toml
cryptopals/46-rsa-parity-oracle/src/: lib.rs
cryptopals/47-bleichenbachers-pkcs15-padding-oracle-simple/: Cargo.toml
cryptopals/47-bleichenbachers-pkcs15-padding-oracle-simple/src/: lib.rs  pkcs115.rs
cryptopals/48-bleichenbachers-pkcs15-padding-oracle-complete/: Cargo.toml
cryptopals/48-bleichenbachers-pkcs15-padding-oracle-complete/src/: lib.rs
cryptopals/49-cbc-mac-message-forgery/: Cargo.toml
cryptopals/49-cbc-mac-message-forgery/src/: lib.rs
cryptopals/5-implement-repeating-key-xor/: Cargo.toml
cryptopals/50-hashing-with-cbc-mac/: Cargo.toml
cryptopals/50-hashing-with-cbc-mac/src/: lib.rs
cryptopals/51-compression-ratio-side-channel-attacks/: Cargo.toml
cryptopals/52-iterated-hash-function-multicollisions/: Cargo.toml
cryptopals/53-kelsey-and-schneiers-expandable-messages/: Cargo.toml
cryptopals/54-kelsey-and-kohnos-nostradamus-attack/: Cargo.toml
cryptopals/55-md4-collisions/: Cargo.toml
cryptopals/56-rc4-single-byte-biases/: Cargo.toml
cryptopals/6-break-repeating-key-xor/: Cargo.toml
cryptopals/7-aes-in-ecb-mode/: Cargo.toml
cryptopals/8-detect-aes-in-ecb-mode/: Cargo.toml
dymaster/: Cargo.toml
dymaster/examples/: slavec.c  (+1 more)
gcd/: Cargo.toml
ldhook/: Cargo.toml  test.fish
leetcode/: README
rkm/: Cargo.toml  Makefile  build.rs  koc.tpl  x86_64-unknown-none-gnu.json
src2txt/: Cargo.toml
tokio-example/: Cargo.toml
try-fn-catch/: Cargo.toml
(+83 files in other folders)
