[package]
name = "byte-at-a-time-ecb-decryption-harder"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.an-ebccbc-detection-oracle]
path = "../11-an-ebccbc-detection-oracle"

[dependencies.byte-at-a-time-ecb-decryption-simple]
path = "../12-byte-at-a-time-ecb-decryption-simple"

[dependencies]
rand = "*"
rustc-serialize = "*"
