[package]
name = "cbc-bitflipping-attacks"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.implement-cbc-mode]
path = "../10-implement-cbc-mode"

[dependencies.an-ebccbc-detection-oracle]
path = "../11-an-ebccbc-detection-oracle"

[dependencies.fixed-xor]
path = "../2-fixed-xor"

[dependencies]
url = "0.5"
