[package]
name = "implement-ctr-the-stream-cipher-mode"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.fixed-xor]
path = "../2-fixed-xor"

[dependencies.an-ebccbc-detection-oracle]
path = "../11-an-ebccbc-detection-oracle"

[dependencies]
openssl = "*"
rustc-serialize = "*"
