[package]
name = "break-fixed-nonce-ctr-statistically"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.break-fixed-nonce-ctr-mode-using-substitions]
path = "../19-break-fixed-nonce-ctr-mode-using-substitions"

[dependencies.implement-ctr-the-stream-cipher-mode]
path = "../18-implement-ctr-the-stream-cipher-mode"

[dependencies.break-repeating-key-xor]
path = "../6-break-repeating-key-xor"

[dependencies.fixed-xor]
path = "../2-fixed-xor"

[dependencies]
rustc-serialize = "*"
