[package]
name = "crack-an-mt19937-seed"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.implement-the-mt19937-mersenne-twister-rng]
path = "../21-implement-the-mt19937-mersenne-twister-rng"

[dependencies.an-ebccbc-detection-oracle]
path = "../11-an-ebccbc-detection-oracle"

[dependencies]
time = "*"
