[package]
name = "break-random-access-read-write-aes-ctr"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.implement-ctr-the-stream-cipher-mode]
path = "../18-implement-ctr-the-stream-cipher-mode"

[dependencies.an-ebccbc-detection-oracle]
path = "../11-an-ebccbc-detection-oracle"

[dependencies]
openssl = "*"
rustc-serialize = "*"
