[package]
name = "implement-and-break-hmac-sha1-with-an-artificial-timing-leak"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.implement-a-sha-1-keyed-mac]
path = "../28-implement-a-sha-1-keyed-mac"

[dependencies.an-ebccbc-detection-oracle]
path = "../11-an-ebccbc-detection-oracle"

[dependencies.fixed-xor]
path = "../2-fixed-xor"

[dependencies]
time = "*"
lazy_static = "*"
maplit = "*"
hyper = "*"
rouille = "*"
rustc-serialize = "*"
