[package]
name = "break-hmac-sha1-with-a-slightly-less-artificial-timing-leak"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.implement-and-break-hmac-sha1-with-an-artificial-timing-leak]
path = "../31-implement-and-break-hmac-sha1-with-an-artificial-timing-leak"

[dependencies]
rouille = "*"
