[package]
name = "implement-a-mitm-key-fixing-attack-on-diffie-hellman-with-parameter-injection"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.implement-diffie-hellman]
path = "../33-implement-diffie-hellman"

[dependencies.implement-a-sha-1-keyed-mac]
path = "../28-implement-a-sha-1-keyed-mac"

[dependencies.an-ebccbc-detection-oracle]
path = "../11-an-ebccbc-detection-oracle"

[dependencies.implement-cbc-mode]
path = "../10-implement-cbc-mode"

[dependencies]
num = "*"
