[package]
name = "implement-secure-remote-password-srp"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.implement-a-mitm-key-fixing-attack-on-diffie-hellman-with-parameter-injection]
path = "../34-implement-a-mitm-key-fixing-attack-on-diffie-hellman-with-parameter-injection"

[dependencies.implement-diffie-hellman]
path = "../33-implement-diffie-hellman"

[dependencies.implement-and-break-hmac-sha1-with-an-artificial-timing-leak]
path = "../31-implement-and-break-hmac-sha1-with-an-artificial-timing-leak"

[dependencies.implement-a-sha-1-keyed-mac]
path = "../28-implement-a-sha-1-keyed-mac"

[dependencies.an-ebccbc-detection-oracle]
path = "../11-an-ebccbc-detection-oracle"

[dependencies]
num = "*"
openssl = "*"
lazy_static = "*"
