[package]
name = "dsa-nonce-recovery-from-repeated-nonce"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.dsa-key-recovery-from-nonce]
path = "../43-dsa-key-recovery-from-nonce"

[dependencies.implement-rsa]
path = "../39-implement-rsa"

[dependencies.implement-diffie-hellman]
path = "../33-implement-diffie-hellman"

[dependencies.implement-a-sha-1-keyed-mac]
path = "../28-implement-a-sha-1-keyed-mac"

[dependencies]
rustc-serialize = "*"
num = "*"
