[package]
name = "dsa-parameter-tampering"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.dsa-key-recovery-from-nonce]
path = "../43-dsa-key-recovery-from-nonce"

[dependencies.bleichenbachers-e-eq-3-rsa-attack]
path = "../42-bleichenbachers-e-eq-3-rsa-attack"

[dependencies.implement-diffie-hellman]
path = "../33-implement-diffie-hellman"

[dependencies]
