[package]
name = "rsa-parity-oracle"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]

[dependencies.implement-rsa]
path = "../39-implement-rsa"

[dependencies.implement-diffie-hellman]
path = "../33-implement-diffie-hellman"

[dependencies.cbc-bitflipping-attacks]
path = "../16-cbc-bitflipping-attacks"

[dependencies]
num = "*"
rustc-serialize = "*"
